k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broidery-frontend 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: broidery-frontend
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: broidery-frontend
    spec:
      containers:
      - name: broidery-front
        image: spirito/broidery-frontend 
        ports:
        - containerPort: 80
        readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
