k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /catalogue
spec:
  ingressClassName: nginx
  rules:
  - host: broidery.info 
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific 
        backend:
          service:
            name: broidery-service
            port:
              number: 80
  - host: argocd
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend: 
          service:
            name: argocd
            port: 
              number: 80
status:
  loadBalancer: {}
